fixed overflow bug

--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -16,7 +16,7 @@ body {
 }
 
 body > * {
-	position: absolute;
+	position: fixed;
 	width: 100vw;
 	height: 100vh;
 }
